# mmv

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  mmv.1  tests
man/: mmv.1
src/: encoded_string.rs  error.rs  flags.rs  lib.rs  main.rs  main_result.rs
